codex-rs/tui2/src/snapshots/codex_tui__model_migration__tests__model_migration_prompt.snap
---
source: tui/src/model_migration.rs
expression: terminal.backend()
---
> Codex just got an upgrade. Introducing gpt-5.1-codex-max

  Codex is now powered by gpt-5.1-codex-max, our latest
  frontier agentic coding model. It is smarter and faster
  than its predecessors and capable of long-running
# tui2/src/snapshots/codex_tui__model_migration__tests__model_migration_prompt.snap
  project-scale work.

  Learn more at https://openai.com/index/gpt-5-1-codex-max/.

  Choose how you'd like Codex to proceed.

› 1. Try new model
  2. Use existing model

  Use ↑/↓ to move, press enter to confirm
