codex-rs/tui2/src/snapshots/codex_tui__model_migration__tests__model_migration_prompt_gpt5_codex.snap
---
source: tui/src/model_migration.rs
expression: terminal.backend()
---
> Introducing our gpt-5.1 models

  We've upgraded our family of models supported in Codex to
# tui2/src/snapshots/codex_tui__model_migration__tests__model_migration_prompt_gpt5_codex.snap
  gpt-5.1, gpt-5.1-codex and gpt-5.1-codex-mini.

  You can continue using legacy models by specifying them
  directly with the -m option or in your config.toml.

  Learn more at https://openai.com/index/gpt-5-1/.

  Press enter to continue
